/*
 * This file was generated by the Gradle 'init' task.
 */

allprojects {
    group = 'com.alphasystem.docx'
    version = '4.0.0-SNAPSHOT'
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'jacoco'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url = uri('https://download.java.net/maven/2/')
        }
        maven {
            url = uri('https://repo.maven.apache.org/maven2')
        }
        maven {
            url = uri("https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/")
        }
    }

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    publishing {
        publications {
            maven(MavenPublication) {
                from(components.java)
            }
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
